--- a/frame.html
+++ b/frame.html
@@ -7,9 +7,10 @@
         <frameset cols="40%,*,30%,">
             <frameset rows="40%,*,30%">
             <frame src="https://adith0503.github.io/08.10-table-task/">
-            <frame src="https://adith0503.github.io/08.10-table-task/.html">
+            <frame src="https://adith0503.github.io/08.10-table-task/">
             </frameset>
             <frame src="https://adith0503.github.io/adith-about-me/.html">
         </frameset>
 
     </html>
+
