--- a/frame.html
+++ b/frame.html
@@ -9,8 +9,9 @@
             <frame src="https://adith0503.github.io/08.10-table-task/">
             <frame src="https://adith0503.github.io/08.10-table-task/">
             </frameset>
-            <frame src="https://adith0503.github.io/adith-about-me/.html">
+            <frame src="https://adith0503.github.io/webpage-22-10-25/">
         </frameset>
 
     </html>
+
 
