--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
         <frameset cols="40%,*,30%,">
             <frameset rows="40%,*,30%">
-            <frame src="https://adith0503.github.io/08.10-table-task/">
+            <frame src="https://adith0503.github.io/adith-about-me/">
             <frame src="https://adith0503.github.io/08.10-table-task/">
             </frameset>
             <frame src="https://adith0503.github.io/webpage-22-10-25/">
